# RadioExperiments

./: .env.example  .gitignore  README.md  audio2cloud.py  main.py  pyproject.toml  requirements.txt  speech2wav.py
speech2textExperiments/: wav2text.py
static/: turbo.js
templates/: base.html  index.html  radioMessages.html
