[tool.poetry]
name = "radioexperiments"
version = "0.1.0"
description = "Hello??? Empty!!!!!"
authors = ["navanchauhan <buffsracing@navan.email>"]

[tool.poetry.dependencies]
python = "^3.8"
PyAudio = "^0.2.12"
Wave = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
