[tool.poetry]
name = "radioexperiments"
version = "0.1.0"
description = "Hello??? Empty!!!!!"
authors = ["navanchauhan <buffsracing@navan.email>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
PyAudio = "^0.2.12"
Wave = "^0.0.2"
azure-cognitiveservices-speech = "^1.23.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
